--- a/components/process/process.module.css
+++ b/components/process/process.module.css
@@ -3,7 +3,7 @@
     height: 100%;
     position: relative;
     display: flex;
-    background: url(../../public/images/cloud.png);
+    background: url(../../public/images/cloud.webp);
     background-size: contain;
     background-position: center center;
     padding: 2rem 4rem;
@@ -31,7 +31,7 @@
 
 @media (max-width: 768px){
     .process{
-        background: url(../../public/images/mobile-cloud.png);
+        background: url(../../public/images/mobile-cloud.webp);
         background-size: cover;
         padding: 6rem 1rem;
     }
