--- a/components/posts/post-item.module.css
+++ b/components/posts/post-item.module.css
@@ -14,6 +14,8 @@
 
 .item-wrapper .img-wrapper{
     transform: translateY(50%);
+    position: relative;
+    z-index: 3;
 }
 
 .item-wrapper .img-wrapper > span{
@@ -24,6 +26,11 @@
     position: relative !important;
 }
 
+.item-wrapper .img-wrapper img{
+    border-radius: 8px !important;
+    overflow: hidden !important;
+}
+
 .item-wrapper .info{
     display: flex;
     width: 100%;
@@ -31,9 +38,10 @@
     align-items: center;
     justify-content: center;
     background: #101010;
-    padding: 11rem 11rem 2rem;
+    padding: 13rem 11rem 2rem;
     border-right: 21px;
     overflow: hidden;
+    border-radius: 8px;
 }
 
 .item-wrapper .info h2{
