--- a/components/auth/login.module.css
+++ b/components/auth/login.module.css
@@ -1,34 +1,34 @@
-.login-btn{
+.login-btn {
     display: flex;
+    justify-content: center;
     width: 100%;
     margin: 0;
-    justify-content: center;
     font-size: 1rem;
     margin-top: 1rem;
     cursor: pointer;
 }
 
-.reset-box{
+.reset-box {
     margin-top: 3rem;
 }
 
-.reset-pass{
+.reset-pass {
     color: #fff;
-    font-size: .6rem;
+    font-size: 0.6rem;
 }
 
-.remember-me{
+.remember-me {
     display: inline-block;
-    font-size: .7rem;
+    font-size: 0.7rem;
 }
 
-.forgot-pass{
+.forgot-pass {
     color: #fff;
-    font-size: .8rem;
+    font-size: 0.8rem;
     cursor: pointer;
 }
 
-.controllers{
+.controllers {
     display: flex;
     width: 100%;
     justify-content: center;
@@ -36,7 +36,7 @@
     margin-bottom: 1rem;
 }
 
-.controllers input{
+.controllers input {
     width: 100%;
     background: rgba(196, 196, 196, 0.04);
     padding: 0.9rem 3rem;
@@ -47,7 +47,7 @@
     backdrop-filter: blur(24px);
 }
 
-.controllers > svg{
+.controllers > svg {
     position: absolute;
     z-index: 9;
     right: 14px;
@@ -55,7 +55,7 @@
     cursor: pointer;
 }
 
-.controllers input::placeholder{
+.controllers input::placeholder {
     color: #fff;
 }
 
@@ -64,4 +64,30 @@
     left: 1rem;
     top: 13px;
     cursor: pointer;
+}
+
+.forget {
+    font-size: 0.7rem;
+    color: #fff;
+    cursor: pointer;
+    margin-top: 3rem;
+}
+
+.box_remember {
+    display: flex;
+    align-items: center;
+    margin-top: 1rem;
+}
+.remember_me {
+    font-size: 0.7rem;
+    color: #fff;
+    padding: 0;
+    text-align: justify;
+}
+.remember {
+    font-size: 0.7rem;
+    color: #fff;
+    padding: 0;
+    text-align: justify;
+    margin-top: 2rem;
 }
