--- a/components/webapp-layout/menu.module.css
+++ b/components/webapp-layout/menu.module.css
@@ -1,9 +1,14 @@
-.desktop-nav{
+.desktop-nav {
     display: block;
+    z-index: 9;
 }
 
-.desktop-nav .wrapper{
-    width: 90%;
+.desktop-nav .wrapper {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: inherit;
+    /* width: 90%; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -16,7 +21,7 @@
     border-radius: 8px;
 }
 
-.wrapper__nav{
+.wrapper__nav {
     width: 100%;
     display: flex;
     height: 100%;
@@ -25,7 +30,7 @@
     align-items: center;
 }
 
-.wrapper__nav .profile{
+.wrapper__nav .profile {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -33,49 +38,49 @@
     padding: 4rem 0;
 }
 
-.wrapper__nav .img-wrapper{
+.wrapper__nav .img-wrapper {
     width: 138px;
     height: 138px;
     border-radius: 50%;
     border: 5px solid #3c3e3c;
 }
 
-.wrapper__nav .img-wrapper span{
+.wrapper__nav .img-wrapper span {
     position: relative !important;
 }
 
-.wrapper__nav .info p{
+.wrapper__nav .info p {
     text-align: center;
-    color: #C4C4C4;
+    color: #c4c4c4;
     font-size: 1.2rem;
 }
 
-.wrapper__nav .info .level{
+.wrapper__nav .info .level {
     display: inline-block;
     margin: 0 5px;
     font-size: 1rem !important;
 }
 
-.desktop-nav .wrapper__nav nav{
+.desktop-nav .wrapper__nav nav {
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
 }
 
-.desktop-nav .wrapper__nav nav ul{
+.desktop-nav .wrapper__nav nav ul {
     display: flex;
     flex-direction: column;
 }
 
-.desktop-nav .wrapper__nav nav ul li a{
-    color: #C4C4C4;
+.desktop-nav .wrapper__nav nav ul li a {
+    color: #c4c4c4;
     display: flex;
     align-items: center;
     margin-bottom: 2rem;
 }
 
-.desktop-nav .wrapper__nav nav ul li a span{
+.desktop-nav .wrapper__nav nav ul li a span {
     position: relative;
     width: 47px;
     height: 47px;
@@ -85,7 +90,7 @@
     background: rgba(255, 255, 255, 0.08);
 }
 
-.desktop-nav .wrapper__nav nav ul li a span svg{
+.desktop-nav .wrapper__nav nav ul li a span svg {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -99,15 +104,16 @@
     border-radius: 50%;
 }
 
-.mobile-nav{
+.mobile-nav {
     display: none;
+    z-index: 9;
 }
 
 @media (max-width: 768px) {
-    .desktop-nav{
+    .desktop-nav {
         display: none;
     }
-    .mobile-nav{
+    .mobile-nav {
         position: fixed;
         bottom: 0;
         width: 100%;
@@ -115,26 +121,26 @@
         background: #232323;
         border-radius: 21px 21px 0 0;
     }
-    .mobile-nav nav{
+    .mobile-nav nav {
         width: 100%;
         padding: 1rem 0;
     }
-    .mobile-nav nav ul{
+    .mobile-nav nav ul {
         width: 100%;
         display: flex;
         justify-content: space-around;
     }
-    .mobile-nav nav ul li{
+    .mobile-nav nav ul li {
         display: inline-flex;
     }
-    .mobile-nav nav ul li a{
+    .mobile-nav nav ul li a {
         display: flex;
         flex-direction: column;
         align-items: center;
-        color: #C4C4C4;
-        font-size: .7rem;
+        color: #c4c4c4;
+        font-size: 0.7rem;
     }
-    .mobile-nav nav ul li a span{
+    .mobile-nav nav ul li a span {
         position: relative;
         width: 47px;
         height: 47px;
@@ -144,7 +150,7 @@
         background: rgba(255, 255, 255, 0.08);
     }
 
-    .mobile-nav nav ul li a span svg{
+    .mobile-nav nav ul li a span svg {
         position: absolute;
         top: 0;
         bottom: 0;
