--- a/components/chart/chart2.module.css
+++ b/components/chart/chart2.module.css
@@ -25,7 +25,7 @@
 
 .bodychart .chart {
     width: clamp( 2rem, 7vw, 7rem);
-    height: 85px;
+    /* height: 85px; */
     display: flex;
     /* min-height: 10px; */
     border-radius: .5rem .5rem 0 0;
